[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["KentaroKajiyama <kemushi555@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
